tests/expectations/parser/functions/function_name_is_not_identifier.out
Error [EPAR0370009]: unexpected string: expected '100u8', found 'identifier in path'
    --> test:4:16
     |
   4 |         return 100u8(0u8);
     |                ^^^^^
